# patterns_of_distributed_systems

./: Cargo.toml  README.md
benches/: kvstore_bench.rs
examples/: wal.rs
src/: kv_store.rs  lib.rs  main.rs  wal.rs
src/wal/: mod.rs  segmented_log.rs
