[package]
name = "patterns_of_distributed_systems"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.98"
glob = "0.3.2"
once_cell = "1.21.3"
rkyv = { version = "0.8.10", features = ["bytecheck"] }
thiserror = "2.0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.19.1"

[[bench]]
name = "kvstore_bench"
harness = false
